syntax="proto3";

option go_package="./pb";

service Auth {
    rpc AuthUser(AuthRequest) returns (AuthResponse) {}
}

message AuthRequest {
    string email = 1;
    string password = 2;
}

message AuthResponse {
    string token = 1;
    bool sucess = 2;
    string message = 3;
}